# ground-booking

./: .gitignore  README.md  render.yaml
.agents/skills/testing-turf-booking/: SKILL.md
sports-booking-backend/: pyproject.toml
sports-booking-backend/app/: auth.py  database.py  main.py
sports-booking-backend/app/routers/: auth_router.py  discussion_router.py  games_router.py  locations_router.py  notifications_router.py  payments_router.py  preferences_router.py  razorpay_router.py  users_router.py
sports-booking-frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
sports-booking-frontend/android/app/: build.gradle
sports-booking-frontend/android/app/src/main/res/values/: strings.xml
sports-booking-frontend/ios/App/App/: Info.plist
sports-booking-frontend/ios/App/App.xcodeproj/: project.pbxproj
sports-booking-frontend/src/: App.tsx
sports-booking-frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
sports-booking-frontend/src/lib/: player.ts
sports-booking-frontend/src/pages/: AdminScreens.tsx  AdminSummary.tsx  BackendSettlement.tsx  ChangePassword.tsx  CompleteGameDialog.tsx  CreateGame.tsx  Dashboard.tsx  DeleteAccount.tsx  Discussion.tsx  ForgotPassword.tsx  GameDetail.tsx  GameSearch.tsx  GroundManagement.tsx  HallOfFame.tsx  LoginPage.tsx  ManageUsers.tsx  ModeratorPreferences.tsx  ModeratorScreens.tsx  MyPayments.tsx  NotificationSettings.tsx  ProfilePage.tsx  RegisterPage.tsx  SearchGrounds.tsx
sports-booking-frontend/src/services/: api.ts
(+2 files in other folders)
