[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.133.1"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
pyjwt = "^2.11.0"
python-multipart = "^0.0.22"
aiosqlite = "^0.22.1"
bcrypt = ">=4.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.2.1"
google-auth = ">=2.0.0"
requests = ">=2.0.0"
razorpay = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
